k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-credential-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/issue
        pathType: Prefix
        backend:
          service:
            name: credentials-service
            port:
              number: 3001
      - path: /api/verify
        pathType: Prefix
        backend:
          service:
            name: credentials-service
            port:
              number: 3001
